Adopt Java 21 virtual threads throughout Eureka
Phase 1 (DiscoveryClient):
- Replace platform-thread scheduler/heartbeat/cacheRefresh executors with
  virtual-thread factories so registration, heartbeat, and cache-refresh
  HTTP calls no longer compete for a fixed-size pool.

Phase 2 (VirtualThreadServletContainerCustomizer):
- New eureka-core helper that installs an
  Executors.newVirtualThreadPerTaskExecutor() on an embedded servlet
  container's ProtocolHandler/Server via reflection. Operators running
  Tomcat 10.1.19+ or Jetty 12+ can invoke it from bootstrap to move
  inbound REST requests off the bounded worker pool.

Phase 3 (peer replication infra):
- TaskExecutors now spawns worker threads via Thread.ofVirtual() so peer
  replication workers can unmount during outbound HTTP I/O.
- AcceptorExecutor's acceptor thread is now a virtual thread.
- TimedSupervisorTask gained a new constructor accepting ExecutorService,
  enabling callers to pass a virtual-thread-per-task executor; the
  existing ThreadPoolExecutor constructor is preserved for compatibility.

Phase 4 (client-side):
- InstanceInfoReplicator's scheduler uses a virtual-thread factory.
- AbstractInstanceRegistry: replace Object/synchronized guards on
  expectedNumberOfClientsSendingRenews and the response cache
  initialization with ReentrantLock to avoid virtual-thread pinning.
- ApplicationInfoManager.setInstanceStatus: replace synchronized method
  with a ReentrantLock so listener notifications (which may trigger
  blocking registration/replication) do not pin carrier threads.

Phase 5 (peer node updater):
- PeerEurekaNodes uses a virtual-thread factory for the
  Eureka-PeerNodesUpdater scheduled executor.

Pre-existing test failures on master (DiscoveryClientRedirectTest,
EurekaClientLifecycle*, UnexpectedContentTypeTest) are unrelated to this
change and reproduce without it.

Co-Authored-By: Ian Carter <iancarter212@gmail.com>